[MembersList] Increase z-index of added modal. Add possibility to determine wheter user can remove member from DB when selected him to edit. Fix removing user from DB in Filemanager class

--- a/web/assets/stylesheets/base.scss
+++ b/web/assets/stylesheets/base.scss
@@ -17,6 +17,10 @@ section {
     }
 }
 
+.modal {
+    z-index: 1500;
+}
+
 .nav-bar {
     position: absolute;
     bottom: 0;
